--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "story-llm"
+name = "VentureVibe"
 version = "0.1.0"
 description = "A backend service to evaluate product ideas using AI agents."
-authors = ["Admin <admin@example.com>"]
+authors = ["Joan Alcaraz <linkedin.com/in/joanalcarazrego>"]
 readme = "README.md"
 packages = [{include = "backend"}]
 
@@ -13,15 +13,12 @@ uvicorn = {extras = ["standard"], version = "*"}
 motor = "*"
 pydantic-ai = "*"
 logfire = {extras = ["fastapi"], version = "^4.16.0"}
-opik = "*"
 python-dotenv = "*"
 openai = "*"
 email-validator = "*"
 passlib = {extras = ["bcrypt"], version = "*"}
 python-jose = {extras = ["cryptography"], version = "*"}
 python-multipart = "*"
-opentelemetry-instrumentation-fastapi = "^0.60b1"
-bcrypt = "^5.0.0"
 argon2-cffi = "^25.1.0"
 
 [tool.poetry.group.dev.dependencies]
